# reviews-analyzer

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  ui.py
app/api/: routes.py
app/core/: config.py  llm.py
app/models/: metrics.py  request.py  response.py  review.py
app/services/: analyzer.py  metrics.py  preprocess.py  scraper.py
